<resources>
    <string name="app_name">GADS_LBD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="submit">Submit</string>
    <string name="learners_country">Learners Country</string>
    <string name="hours_done">Hours Done</string>
    <string name="learning_hours_conj">learning hours,</string>
    <string name="learners_name">Learners Name</string>
    <string name="error_loading_data">Error Loading Data</string>
    <string name="skill_iq_score">SKill IQ Score,</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project On GITHUB (link).</string>
    <string name="are_you_sure">Are You Sure ?</string>
    <string name="yes">Yes</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission Unsuccessful</string>
    <string name="project_submission">Project Submission</string>
    <string name="go_back">Go Back</string>
    <string name="action_bar_logo">Action Bar Logo</string>
    <string name="divider">Divider</string>
</resources>