<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launch"
    tools:context=".SubmissionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="?android:attr/actionBarSize"
                    android:layout_weight="30"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:tint="#FFFFFF"
                    android:onClick="back"/>

                <ImageView
                    android:id="@+id/actn_bar_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="?android:attr/actionBarSize"
                    android:layout_weight="70"
                    android:src="@drawable/action_bar_logo" />
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/project_submission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Project Submission"
        android:layout_margin="6dp"
        android:paddingTop="20dp"
        android:textColor="#ffae45"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/appbar"/>

    <ImageView
        android:id="@+id/divider_line"
        android:layout_width="match_parent"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_height="2dp"
        android:src="@drawable/divider"
        android:layout_below="@id/project_submission"
        android:layout_marginBottom="60dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider_line">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_style"
                    android:hint="@string/first_name"
                    android:paddingStart="6dp"
                    android:paddingLeft="6dp"
                    android:textColor="#717171"
                    android:textColorHint="#717171" />

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_style"
                    android:hint="@string/last_name"
                    android:paddingStart="6dp"
                    android:paddingLeft="6dp"
                    android:textColor="#717171"
                    android:textColorHint="#717171" />

            </LinearLayout>

            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="48dp"
                android:background="@drawable/edittext_style"
                android:hint="@string/email_address"
                android:paddingStart="6dp"
                android:paddingLeft="6dp"
                android:textColor="#717171"
                android:textColorHint="#717171" />

            <EditText
                android:id="@+id/github_link"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="48dp"
                android:background="@drawable/edittext_style"
                android:hint="@string/project_on_github_link"
                android:paddingStart="6dp"
                android:textColor="#717171"
                android:textColorHint="#717171" />

            <Button
                android:id="@+id/submit_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/submit_proj_button_bg"
                android:paddingHorizontal="60dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
