<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/spacing_medium"
    android:layout_marginLeft="@dimen/spacing_medium"
    android:layout_marginRight="@dimen/spacing_medium"
    android:layout_marginTop="@dimen/spacing_medium"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/card_radius"
    app:cardElevation="@dimen/card_elevation"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lyt_color"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_weight="40">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/skill_iq" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:background="@android:color/white"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/learners_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="#6E6666"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSkills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:padding="2dp"
                    android:text="@string/skill_iq_score"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="#776C6C" />

                <TextView
                    android:id="@+id/tvConjuction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:padding="2dp"
                    android:text="@string/skill_iq_score"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="#736767" />

                <TextView
                    android:id="@+id/tvCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:padding="2dp"
                    android:text="@string/learners_country"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="#6C6464" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>